Responsiveness Issue of text overflowing out of the placards solved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1515,7 +1515,7 @@ a:hover i {
   box-sizing: content-box;
   padding: 30px;
   margin: 30px 15px;
-  height: 400px;
+  height: 450px;
   transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px,
     rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
